--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,39 @@
-# See https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
-
-# compiled output
-dist
-tmp
-out-tsc
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-node_modules
+/node_modules
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
+# testing
+/coverage
 
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# production
+/build
+/dist
+/.next
 
 # misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
-
-# System Files
 .DS_Store
-Thumbs.db
+*.pem
 
-.nx/cache
-.nx/workspace-data
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Next.js
-.next
-out
+# local env files
+.env*.local
+.env
 
-test-output
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+
+# Database files
+*.db
+*.db-journal
+/data
+
+# Drizzle migrations
+**/drizzle
